apps/hass/zwave/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave
  namespace: hass
  labels:
    app: zwave
spec:
  selector:
    app: zwave
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
      name: http
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: websocket
  type: ClusterIP
